# time-series-analysis

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-ghcr.yml
models/: anomaly_model.joblib
src/time_series_analysis/: constants.py  task_1a_data_collection.py  task_1b_artifact_detection.py  task_2a_anomaly_detection.py  task_2b_risk_scoring.py  task_3a_metrics.py  task_3b_failure_analysis.py  task_4a_api.py
