[project]
authors = [{name = "keanesc", email = "145848994+keanesc@users.noreply.github.com"}]
dependencies = ["wfdb>=4.3.1,<5", "numpy>=2.4.2,<3", "scipy>=1.17.0,<2", "pandas>=3.0.0,<4", "matplotlib>=3.10.8,<4", "neurokit2>=0.2.12,<0.3"]
name = "time-series-analysis"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.pypi-dependencies]
time_series_analysis = { path = ".", editable = true }

[tool.pixi.tasks]
